# rockchip-va-driver

./: COPYING  Makefile.am  README.md  configure.ac
src/: Makefile.am  object_heap.c  rockchip_buffer.c  rockchip_drv_video.c  rockchip_encoder.c  rockchip_image.c  rockchip_picture.c  rockchip_surface.c  v4l2_utils.c
src/include/: object_heap.h  rk_vepu_plugin.h  rockchip_buffer.h  rockchip_drv_video.h  rockchip_encoder.h  rockchip_image.h  rockchip_picture.h  rockchip_surface.h  v4l2_utils.h
